--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@discordjs/rest": "^0.4.1",
+		"discord-api-types": "^0.31.2",
 		"discord.js": "^13.6.0",
 		"dotenv": "^16.0.0"
 	},
